[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "u4dsr-gastro4d-ussim"
version = "1.0.0"
description = "U4DSR (PAOC + GBR) and Gastro4D-USSim for 4D gastric ultrasound reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Yanan Liu" },
]
keywords = [
  "freehand ultrasound",
  "4D reconstruction",
  "gastric motility",
  "dynamic surface modeling",
  "phase alignment",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/NancyLYN-icloud/U4DSR-Gastro4D-USSim"
Repository = "https://github.com/NancyLYN-icloud/U4DSR-Gastro4D-USSim"
Documentation = "https://github.com/NancyLYN-icloud/U4DSR-Gastro4D-USSim/blob/master/docs/METHOD.md"

[tool.setuptools]
packages = ["gbr_4d_ums"]
